--- a/apps/docs/src/layouts/DocsLayout.astro
+++ b/apps/docs/src/layouts/DocsLayout.astro
@@ -3,6 +3,9 @@ import type { MarkdownHeading } from "astro";
 import type { Frontmatter } from "../config";
 import { GITHUB_EDIT_URL, SITE } from "../config";
 import Head from "../components/Head.astro";
+import Header from "../components/Header.astro";
+import LeftSidebar from "../components/Docs/LeftSidebar.astro";
+import RightSidebar from "../components/Docs/RightSidebar.astro";
 
 type Props = {
   frontmatter: Frontmatter;
@@ -23,9 +26,16 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
 		</title>
 	</head>
 
-	<body>
-		<main>
-      <slot/>
+	<body class="min-h-screen max-w-7xl mx-auto">
+    <Header />
+		<main class="grid w-full grid-cols-1 md:grid-cols-[250px_auto] lg:grid-cols-[250px_auto_250px]">
+      <LeftSidebar currentPage={currentPage} />
+
+      <div class="col-span-1 flex min-h-full w-full flex-col pt-5">
+        <slot/>
+      </div>
+      <RightSidebar currentPage={currentPage} />
+
     </main>
 	</body>
 </html>
